--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>IUSCanada.com Home Page</title>
+	<title>Government Model School's M74 Welfare Society- Home Page</title>
 
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	<link rel="stylesheet"
